--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
     <title>Fisheye</title>
   </head>
   <body>
+
     <header>
-        <img src="assets/images/logo.png" class="logo" />
-        <h1>Nos photographes</h1>
+      <a href="#" title="Accueil Fisheye">    
+        <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" />
+      </a>
+        <h1 title="Nos photographes">Nos photographes</h1>
     </header>
+
     <main id="main">
         <div class="photographer_section"></div>
     </main>
-    <script src="scripts/factories/photographer.js"></script>
-    <script src="scripts/pages/index.js"></script>
+    
+    <!-- Entry point -->
+    <script src="scripts/pages/index.js" type="module"></script>
+
   </body>
 </html>
