Visually almost good

--- a/index.html
+++ b/index.html
@@ -2,26 +2,36 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
+      rel="stylesheet"
+    />
     <title>Fisheye</title>
   </head>
   <body>
-
     <header>
-      <a href="#" title="Accueil Fisheye">    
-        <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" />
+      <a href="#" title="Accueil Fisheye">
+        <img
+          src="assets/images/logo.png"
+          class="logo"
+          alt="Fisheye Home page"
+        />
       </a>
-        <h1 title="Nos photographes">Nos photographes</h1>
+      <h1 title="Nos photographes">Nos photographes</h1>
     </header>
 
     <main id="main">
-        <div class="photographer_section"></div>
+      <div class="photographer_section"></div>
     </main>
-    
-    <!-- Entry point -->
-    <script src="scripts/pages/index.js" type="module"></script>
 
+    <!-- FA -->
+    <script
+      src="https://kit.fontawesome.com/87b1b2a1ce.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- point d'entrée -->
+    <script src="scripts/pages/index.js" type="module"></script>
   </body>
 </html>
