--- a/photographer.html
+++ b/photographer.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <link href="css/photographer.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="css/photographer.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link
       href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
@@ -50,7 +52,7 @@
 
     <!-- modal -->
     <div id="contact-modal" aria-hidden="true" role="dialog"></div>
-    <div class="lightbox_modal" aria-hidden="true" role="dialog"></div>
+    <div id="carroussel-modal" aria-hidden="true" role="dialog"></div>
 
     <script
       src="https://kit.fontawesome.com/87b1b2a1ce.js"
