before modifications (tri)

--- a/photographer.html
+++ b/photographer.html
@@ -52,7 +52,7 @@
 
     <!-- modal -->
     <div id="contact-modal" aria-hidden="true" role="dialog"></div>
-    <div id="carroussel-modal" aria-hidden="true" role="dialog"></div>
+    <div id="carousel-modal" aria-hidden="true" role="dialog"></div>
 
     <script
       src="https://kit.fontawesome.com/87b1b2a1ce.js"
